Change app service to use pre-built image
Updated the app service to use a pre-built image instead of building from the current directory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3.9"
 
 services:
   app:
-    build: .
-    container_name: codeigniter-app
-    restart: always
+    image: codeigniter-app:latest
     environment:
       CI_ENVIRONMENT: development
       DATABASE_HOST: mariadb
