--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,7 @@ version: "3.9"
 services:
   app:
     image: codeigniter-app:latest
-    environment:
-      CI_ENVIRONMENT: development
-      BASE_URL: https://pppr.ecl.dev.br
-      DATABASE_HOST: mariadb
-      DATABASE_NAME: codeigniter
-      DATABASE_USER: ciuser
-      DATABASE_PASS: cipass
+    env_file: .env
     depends_on:
       - mariadb
     networks:
@@ -17,13 +11,13 @@ services:
       - internal_net
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.portainer.rule=Host(`pppr.ecl.dev.br`)" ## Dominio do Portainer
-      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
-      - "traefik.http.routers.portainer.tls.certresolver=letsencryptresolver"
-      - "traefik.http.routers.portainer.service=portainer"
+      - "traefik.http.routers.app.rule=Host(`pppr.ecl.dev.br`)" ## Dominio do app
+      - "traefik.http.services.app.loadbalancer.server.port=80"
+      - "traefik.http.routers.app.tls.certresolver=letsencryptresolver"
+      - "traefik.http.routers.app.service=app"
       - "traefik.docker.network=labnet" ## Nome da rede interna
-      - "traefik.http.routers.portainer.entrypoints=websecure"
-      - "traefik.http.routers.portainer.priority=1"
+      - "traefik.http.routers.app.entrypoints=websecure"
+      - "traefik.http.routers.app.priority=1"
 
   mariadb:
     image: mariadb:11
