--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   app:
-    image: codeigniter-app:latest
+    build: .
     depends_on:
       - mariadb
     networks:
