feat: Atualiza serviço da aplicação para usar imagem pré-construída

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.9"
 
 services:
   app:
-    build: .
+    image: codeigniter-app:latest
+  
     depends_on:
       - mariadb
     networks:
