Add GitHub Actions CI/CD for automated Docker build and GitOps deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3.9"
 
 services:
   app:
-  
-    image: codeigniter-app:latest
+    image: emanuelluz/phpcodeigniter:latest
   
     depends_on:
       - mariadb
