--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # Em vez de ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -16,27 +16,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-    - name: Generate image tag
-      id: meta
+    - name: Build Docker image locally
       run: |
-        echo "tags=emanuelluz/phpcodeigniter:latest,emanuelluz/phpcodeigniter:${{ github.sha }}" >> $GITHUB_OUTPUT
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        docker build -t phpcodeigniter:latest .
+        docker tag phpcodeigniter:latest phpcodeigniter:${{ github.sha }}
 
     - name: Update docker-compose.yml
       run: |
-        sed -i "s|image: codeigniter-app:latest|image: emanuelluz/phpcodeigniter:${{ github.sha }}|" docker-compose.yml
+        sed -i "s|image: phpcodeigniter:latest|image: phpcodeigniter:${{ github.sha }}|" docker-compose.yml
 
     - name: Commit and push updated docker-compose.yml
       run: |
