--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install PHP extensions
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y php8.3-dom php8.3-xml php8.3-mbstring
+
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
 
