--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,39 +3,51 @@ version: "3.9"
 services:
   app:
     image: phpcodeigniter:latest
-  
-    depends_on:
-      - mariadb
+    deploy:
+      replicas: 2
+      update_config:
+        parallelism: 1
+        delay: 10s
+        order: start-first
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=labnet"
+        
+        # Roteador HTTP (redirect para HTTPS)
+        - "traefik.http.routers.app-http.rule=Host(`pppr.ecl.dev.br`)"
+        - "traefik.http.routers.app-http.entrypoints=web"
+        - "traefik.http.routers.app-http.middlewares=redirect-to-https"
+        
+        # Roteador HTTPS
+        - "traefik.http.routers.app.rule=Host(`pppr.ecl.dev.br`)"
+        - "traefik.http.routers.app.entrypoints=websecure"
+        - "traefik.http.routers.app.tls.certresolver=letsencryptresolver"
+        - "traefik.http.routers.app.service=app"
+        
+        # Service
+        - "traefik.http.services.app.loadbalancer.server.port=80"
+        
+        # Middleware redirect
+        - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+        - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
     networks:
       - labnet
       - internal_net
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=labnet"
-      
-      # Roteador HTTP (redirect para HTTPS)
-      - "traefik.http.routers.app-http.rule=Host(`pppr.ecl.dev.br`)"
-      - "traefik.http.routers.app-http.entrypoints=web"
-      - "traefik.http.routers.app-http.middlewares=redirect-to-https"
-      
-      # Roteador HTTPS
-      - "traefik.http.routers.app.rule=Host(`pppr.ecl.dev.br`)"
-      - "traefik.http.routers.app.entrypoints=websecure"
-      - "traefik.http.routers.app.tls.certresolver=letsencryptresolver"
-      - "traefik.http.routers.app.service=app"
-      
-      # Service
-      - "traefik.http.services.app.loadbalancer.server.port=80"
-      
-      # Middleware redirect
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
 
 
   mariadb:
     image: mariadb:11
-    container_name: mariadb
-    restart: always
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+      restart_policy:
+        condition: on-failure
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_DATABASE: codeigniter
