Atualiza a mensagem de boas-vindas no módulo Admin e corrige a configuração da rede interna no Docker Compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,5 +64,7 @@ volumes:
 networks:
   labnet:
     external: true   # rede já criada para Traefik
+    name: labnet
   internal_net:
-    external: false
+    external: true
+    name: internal_net
