Corrige a configuração da rede interna no Docker Compose e remove texto desnecessário da mensagem de boas-vindas no módulo Admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,5 +66,5 @@ networks:
     external: true   # rede já criada para Traefik
     name: labnet
   internal_net:
-    external: true
+    external: false
     name: internal_net
