Swarm: deixar a internal_net ser criada pela stack (escopo overlay)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,4 @@ networks:
   labnet:
     external: true   # rede já criada para Traefik
     name: labnet
-  internal_net:
-    external: false
-    name: internal_net
+  internal_net: {}
