Atualiza a configuração da rede internal_net no Docker Compose e modifica a mensagem de boas-vindas no módulo Admin.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,4 +68,6 @@ networks:
   labnet:
     external: true   # rede já criada para Traefik
     name: labnet
-  internal_net: {}
+  internal_net:
+    external: false
+    name: internal_net
