Descomenta as configurações do banco de dados no arquivo .env

--- a/.env
+++ b/.env
@@ -30,13 +30,13 @@ app.baseURL = https://pppr.ecl.dev.br
 # DATABASE
 #--------------------------------------------------------------------
 
-# database.default.hostname = mariadb
-# database.default.database = codeigniter
-# database.default.username = ciuser
-# database.default.password = cipass
-# database.default.DBDriver = MySQLi
-# database.default.DBPrefix =
-# database.default.port = 3306
+database.default.hostname = mariadb
+database.default.database = codeigniter
+database.default.username = ciuser
+database.default.password = cipass
+database.default.DBDriver = MySQLi
+database.default.DBPrefix =
+database.default.port = 3306
 
 # If you use MySQLi as tests, first update the values of Config\Database::$tests.
 # database.tests.hostname = localhost
