feat: aprimorar fluxo de deploy do Docker com limpeza de redes e retry no deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,4 +68,7 @@ networks:
   labnet:
     external: true   # rede já criada para Traefik
     name: labnet
-  internal_net: {}
+  internal_net:
+    driver: overlay
+    name: phpcodeigniter_internal_net
+    attachable: true
