--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -61,13 +61,52 @@ jobs:
               docker stack ls | grep -q "^phpcodeigniter\b" || break
               echo "Waiting stack removal... $i"; sleep 2
             done
+            # Aguarda remoção completa das redes do stack
+            echo "Waiting for network cleanup..."
+            for i in {1..30}; do
+              if ! docker network ls | grep -q "phpcodeigniter_internal_net"; then
+                echo "Network cleanup complete"; break
+              fi
+              echo "Waiting network cleanup... $i"; sleep 2
+            done
           else
             echo "No existing stack named phpcodeigniter."
           fi
 
-      - name: Deploy stack
+      - name: Ensure internal networks are ready
+        shell: bash
         run: |
-          docker stack deploy -c docker-compose.yml phpcodeigniter --with-registry-auth
+          echo "Pre-creating internal networks if needed..."
+          # Verificar se a rede interna existe, se não criar
+          if ! docker network inspect phpcodeigniter_internal_net >/dev/null 2>&1; then
+            echo "Creating overlay network: phpcodeigniter_internal_net"
+            docker network create -d overlay --attachable phpcodeigniter_internal_net
+          else
+            echo "Network 'phpcodeigniter_internal_net' already exists"
+          fi
+          echo "Networks ready:" && docker network ls | grep -E "phpcodeigniter|labnet" || true
+
+      - name: Deploy stack
+        shell: bash
+        run: |
+          echo "Deploying stack with retry mechanism..."
+          for attempt in {1..3}; do
+            echo "Deploy attempt $attempt/3"
+            if docker stack deploy -c docker-compose.yml phpcodeigniter --with-registry-auth; then
+              echo "Stack deployed successfully on attempt $attempt"
+              break
+            else
+              echo "Deploy failed on attempt $attempt"
+              if [ $attempt -eq 3 ]; then
+                echo "All deploy attempts failed"
+                exit 1
+              fi
+              echo "Waiting 10 seconds before retry..."
+              sleep 10
+              # Limpar possíveis recursos órfãos
+              docker system prune -f --filter "label=com.docker.stack.namespace=phpcodeigniter" || true
+            fi
+          done
 
       - name: Verify services
         shell: bash
