Atualiza .gitignore para ignorar arquivos de sessão e banco de dados
- Adiciona regras para ignorar ci_session* em public/null/
- Adiciona regras para ignorar arquivos .db (SQLite)
- Remove arquivo database.db do rastreamento Git
- Mantém apenas arquivos de código-fonte no repositório

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,19 @@ writable/logs/*
 writable/session/*
 !writable/session/index.html
 
+#-------------------------
+# Database & Session Files
+#-------------------------
+# SQLite database files
+writable/database.db
+writable/database.db-*
+database.db
+*.db
+
+# Session files
+ci_session*
+public/null/ci_session*
+
 writable/uploads/*
 !writable/uploads/index.html
 
