Corrige configuração de ambiente para Docker nos workflows
- Dockerfile agora copia .env.docker.backup como .env durante build
- Garante que container use configuração MariaDB em vez de SQLite
- Ativa configurações de sessão adequadas para ambiente Docker
- Resolve erro de SQLite em workflows CI/CD

--- a/.env.docker.backup
+++ b/.env.docker.backup
@@ -69,8 +69,9 @@ database.default.port = 3306
 # SESSION
 #--------------------------------------------------------------------
 
-# session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
-# session.savePath = null
+# Para Docker/MariaDB, usar sessions baseadas em arquivo
+session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
+session.savePath = null
 
 #--------------------------------------------------------------------
 # LOGGER
