Fix: Corrigir configuração de banco Docker no workflow CI/CD
- Criar script setup-env-docker.sh para garantir configuração MariaDB
- Modificar Dockerfile para usar script em vez de cp simples
- Adicionar diagnóstico de banco no workflow do GitHub Actions
- Corrigir formatação AuthGroups.php após edições manuais
- Implementar verificação robusta de ambiente Docker vs local

Resolve problema de SQLite3 sendo usado em vez de MariaDB no CI/CD

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -184,6 +184,11 @@ jobs:
             fi
             echo "Database not ready yet ($i)..."; sleep 2
           done
+          
+          echo "Running database diagnostics..."
+          docker exec -w /var/www/html "$CID" chmod +x scripts/db-diagnostic.sh
+          docker exec -w /var/www/html "$CID" scripts/db-diagnostic.sh || true
+          
           echo "Running migrations in container $CID"
           docker exec -w /var/www/html "$CID" php spark migrate --all
           echo "Seeding AdminUserSeeder"
