Fix: Corrigir configuração de sessões no Docker
- Remover session.savePath = null do .env.docker.backup que causava erro
- Atualizar setup-env-docker.sh para configurar sessões corretamente
- Garantir criação do diretório writable/session com permissões corretas
- Usar configuração padrão do CodeIgniter (WRITEPATH . 'session')

Resolve erro: touch(): Unable to create file null/ci_session* após login

--- a/.env
+++ b/.env
@@ -71,7 +71,7 @@ database.default.port = 3306
 
 # Para Docker/MariaDB, usar sessions baseadas em arquivo
 session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
-session.savePath = null
+# session.savePath = (usa o padrão WRITEPATH . 'session' se não especificado)
 
 #--------------------------------------------------------------------
 # LOGGER
@@ -87,4 +87,8 @@ database.default.username = ciuser
 database.default.password = cipass
 database.default.DBDriver = MySQLi
 database.default.port = 3306
+
+# Configurações de sessão para Docker
+session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
+# session.savePath usa o padrão WRITEPATH . 'session'
 
