--- a/.env.docker.backup
+++ b/.env.docker.backup
@@ -71,7 +71,7 @@ database.default.port = 3306
 
 # Para Docker/MariaDB, usar sessions baseadas em arquivo
 session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
-session.savePath = null
+# session.savePath = (usa o padrão WRITEPATH . 'session' se não especificado)
 
 #--------------------------------------------------------------------
 # LOGGER
