Refactor: Reorganizar estrutura de ambientes com .env dedicados
### Estrutura Nova:
- .env.local: Desenvolvimento local com SQLite3
- .env.production: Produção/homologação com MariaDB via Docker
- .env: Arquivo ativo (copiado automaticamente)

### Mudanças:
- Criar .env.production para deploy Docker via GitHub Actions
- Atualizar .env.local com configuração de sessão correta
- Remover .env.docker.backup obsoleto
- Simplificar script setup-env-docker.sh para usar .env.production
- Adicionar ENV_SETUP.md com documentação completa

### Benefícios:
- Separação clara entre desenvolvimento local e produção
- Configurações específicas para cada ambiente
- Menor chance de erros de configuração
- Documentação clara do uso de cada arquivo

--- a/.env.local
+++ b/.env.local
@@ -35,11 +35,11 @@ ADMIN_USERNAME = admin
 # encryption.key = 
 
 #--------------------------------------------------------------------
-# SESSION
+# SESSION - Sessões baseadas em arquivo para desenvolvimento local
 #--------------------------------------------------------------------
 
-# session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
-# session.savePath = null
+session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
+# session.savePath = (usa o padrão WRITEPATH . 'session')
 
 #--------------------------------------------------------------------
 # LOGGER
