Fix: Configurar ambiente local para desenvolvimento com SQLite
- Copiar .env.local para .env para desenvolvimento local
- Corrigir caminho do banco SQLite para absoluto (/home/emanuel/phpCodeigniter/writable/database.db)
- Executar migrações --all para incluir Shield e Settings
- Criar usuário admin via AdminUserSeeder
- Corrigir permissões do diretório writable e banco SQLite

Resolvi problema de conexão SQLite em desenvolvimento local

--- a/.env
+++ b/.env
@@ -1,35 +1,27 @@
 #--------------------------------------------------------------------
-# Environment Configuration for Production/Homologation (Docker)
+# Environment Configuration for Local Development (without Docker)
 #--------------------------------------------------------------------
 
-#--------------------------------------------------------------------
-# ENVIRONMENT
-#--------------------------------------------------------------------
-
-CI_ENVIRONMENT = production
+CI_ENVIRONMENT = development
 
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = https://pppr.ecl.dev.br
-# app.forceGlobalSecureRequests = true
+app.baseURL = http://localhost:8080
+# app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
 #--------------------------------------------------------------------
-# DATABASE - MariaDB para produção via Docker
+# DATABASE - SQLite para desenvolvimento local
 #--------------------------------------------------------------------
 
-database.default.hostname = mariadb
-database.default.database = codeigniter
-database.default.username = ciuser
-database.default.password = cipass
-database.default.DBDriver = MySQLi
+database.default.database = /home/emanuel/phpCodeigniter/writable/database.db
+database.default.DBDriver = SQLite3
 database.default.DBPrefix =
-database.default.port = 3306
 
 #--------------------------------------------------------------------
-# AUTHENTICATION - Credenciais de admin para produção
+# AUTHENTICATION - Credenciais de admin para testes
 #--------------------------------------------------------------------
 
 ADMIN_EMAIL = admin@example.com
@@ -40,10 +32,10 @@ ADMIN_USERNAME = admin
 # ENCRYPTION
 #--------------------------------------------------------------------
 
-# encryption.key = (será gerado automaticamente se necessário)
+# encryption.key = 
 
 #--------------------------------------------------------------------
-# SESSION - Sessões baseadas em arquivo para Docker
+# SESSION - Sessões baseadas em arquivo para desenvolvimento local
 #--------------------------------------------------------------------
 
 session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
@@ -53,12 +45,4 @@ session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
 # LOGGER
 #--------------------------------------------------------------------
 
-logger.threshold = 4
-
-#--------------------------------------------------------------------
-# SECURITY
-#--------------------------------------------------------------------
-
-# Configurações de segurança para produção
-# security.tokenRandomize = true
-# security.regenerate = true
+# logger.threshold = 4
