--- a/.env.local
+++ b/.env.local
@@ -16,7 +16,7 @@ app.baseURL = http://localhost:8080
 # DATABASE - SQLite para desenvolvimento local
 #--------------------------------------------------------------------
 
-database.default.database = writable/database.db
+database.default.database = /home/emanuel/phpCodeigniter/writable/database.db
 database.default.DBDriver = SQLite3
 database.default.DBPrefix =
 
