Fix: Resolver instabilidade de sessões em produção Docker
### Problema:
- Sessões intermitentes em produção (logado/deslogado ao atualizar página)
- FileHandler não funciona bem com múltiplos containers Docker
- Balanceamento de carga causa perda de sessões em arquivo

### Solução Implementada:
- Migrar para DatabaseHandler em produção (.env.production)
- Usar tabela ci_sessions no MariaDB para persistência
- Configurar parâmetros otimizados:
  * session.matchIP = false (compatibilidade load balancer)
  * session.expiration = 7200 (2 horas)
  * session.timeToUpdate = 300 (5 min)
  * session.regenerateDestroy = false (evita conflitos)

### Alterações:
- .env.production: session.driver = DatabaseHandler
- Dockerfile: permissões 777 em writable/ para sessões
- setup-env-docker.sh: configuração robusta de permissões
- Migração ci_sessions já existente será usada

Resolve problema de autenticação instável em produção

--- a/.env.production
+++ b/.env.production
@@ -43,11 +43,15 @@ ADMIN_USERNAME = admin
 # encryption.key = (será gerado automaticamente se necessário)
 
 #--------------------------------------------------------------------
-# SESSION - Sessões baseadas em arquivo para Docker
+# SESSION - Sessões em banco MariaDB para Docker (multi-container)
 #--------------------------------------------------------------------
 
-session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
-# session.savePath = (usa o padrão WRITEPATH . 'session')
+session.driver = 'CodeIgniter\Session\Handlers\DatabaseHandler'
+session.savePath = 'ci_sessions'
+session.expiration = 7200
+session.matchIP = false
+session.timeToUpdate = 300
+session.regenerateDestroy = false
 
 #--------------------------------------------------------------------
 # LOGGER
