Refactor user edit view to use Tailwind CSS and improve sidebar layout; add test for group creation functionality

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Environment Configuration for Local Development (without Docker)
 #--------------------------------------------------------------------
 
-CI_ENVIRONMENT = development
+CI_ENVIRONMENT = Development
 
 #--------------------------------------------------------------------
 # APP
