--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,11 @@ version: "3.9"
 
 services:
   app:
-    image: phpcodeigniter:latest
+    # Build a partir do repositório Git
+    build:
+      context: https://github.com/Emanuelluz/phpCodeigniter.git#main  # ajuste para sua URL e branch
+      dockerfile: Dockerfile
+    image: seu-registry/phpcodeigniter:latest  # opcional: push para registry
     deploy:
       replicas: 2
       placement:
@@ -19,28 +23,21 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.network=labnet"
-        
-        # Roteador HTTP (redirect para HTTPS)
+        # HTTP → HTTPS redirect
         - "traefik.http.routers.app-http.rule=Host(`pppr.ecl.dev.br`)"
         - "traefik.http.routers.app-http.entrypoints=web"
         - "traefik.http.routers.app-http.middlewares=redirect-to-https"
-        
-        # Roteador HTTPS
+        # HTTPS
         - "traefik.http.routers.app.rule=Host(`pppr.ecl.dev.br`)"
         - "traefik.http.routers.app.entrypoints=websecure"
         - "traefik.http.routers.app.tls.certresolver=letsencryptresolver"
-        - "traefik.http.routers.app.service=app"
-        
-        # Service
         - "traefik.http.services.app.loadbalancer.server.port=80"
-        
-        # Middleware redirect
+        # Middleware
         - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
         - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
     networks:
       - labnet
       - internal_net
-
 
   mariadb:
     image: mariadb:11
@@ -66,10 +63,8 @@ volumes:
 
 networks:
   labnet:
-    external: true   # rede já criada para Traefik
+    external: true
     name: labnet
   internal_net:
-    # Tornamos a rede interna externa/gerenciada fora do stack para evitar
-    # conflitos de criação ("network already exists") em deploys.
     external: true
     name: phpcodeigniter_internal_net
