Fix: Corrigir a imagem do serviço app no docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: https://github.com/Emanuelluz/phpCodeigniter.git#main  # ajuste para sua URL e branch
       dockerfile: Dockerfile
-    image: seu-registry/phpcodeigniter:latest  # opcional: push para registry
+    image: phpcodeigniter:latest  # opcional: push para registry
     deploy:
       replicas: 2
       placement:
