--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0",
-        "codeigniter4/shield": "^1.0"
+        "codeigniter4/framework": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
@@ -39,9 +38,6 @@
         "sort-packages": true
     },
     "scripts": {
-        "test": "phpunit",
-        "post-install-cmd": [
-           "chmod -R 777 writable"
-       ]
+        "test": "phpunit"
     }
 }
