--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "codeigniter4/shield": "^1.2",
+        "league/oauth2-client": "^2.8",
+        "league/oauth2-google": "^4.0",
+        "onelogin/php-saml": "^4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
