Add post-install command to run migrations

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,8 @@
     },
     "scripts": {
         "test": "phpunit",
-        "php spark migrate"
+        "post-install-cmd": [
+      "php spark migrate"
+    ]
     }
 }
