--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "league/oauth2-google": "^4.0",
         "onelogin/php-saml": "^4.3",
          "ext-mysqli": "*",
-        "ext-pdo_mysql": "*"
+        "ext-pdo_mysql": "*",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
