--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
         "league/oauth2-client": "^2.8",
         "league/oauth2-google": "^4.0",
         "onelogin/php-saml": "^4.3",
-         "ext-mysqli": "*",
-        "ext-pdo_mysql": "*",
-        "predis/predis": "^2.2"
+         "predis/predis": "^2.2",
+         "ext-mysqli": "^8.1",
+        "ext-pdo_mysql": "^8.1"
+       
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
