--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,14 @@
     },
     "require": {
         "php": "^8.1",
+        "ext-mysqli": "^8.1",
+        "ext-pdo_mysql": "^8.1",
         "codeigniter4/framework": "^4.0",
         "codeigniter4/shield": "^1.2",
         "league/oauth2-client": "^2.8",
         "league/oauth2-google": "^4.0",
         "onelogin/php-saml": "^4.3",
-         "predis/predis": "^2.2",
-         "ext-mysqli": "^8.1",
-        "ext-pdo_mysql": "^8.1"
-       
+        "predis/predis": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
